Termiando ajustar detalles en los controllers y readme
